--- a/apis/blogs/index.html
+++ b/apis/blogs/index.html
@@ -7,7 +7,7 @@ tag: Blog
   {
   "title": "{{ post.title }}",
   "date": "{{ post.date | date_to_string }}",
-  "body": "{{ post.content | replace: '"','' | replace: "'","\'" | strip_html | escape | newline_to_br | strip_newlines }}",
+  "body": "{{ post.content | replace: '"','' | replace: "'","\'" | strip_html | escape | newline_to_br | strip_newlines | replace: "<br /><br />","<br />" | replace: "<br /><br />","<br />" | replace: "<br /><br />","<br />" }}",
   "url": "{{ site.url }}",
   "image": "{{ post.image }}"
   }{% if forloop.last != true %},{% endif %}{% endfor %}
